--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0-beta.5",
     "react-scripts": "4.0.3",
     "tone": "^14.7.77",
     "uniqid": "^5.4.0",
