--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "audiobuffer-to-wav": "^1.0.0",
+    "audioworklet-polyfill": "^1.1.2",
     "downloadjs": "^1.4.7",
     "jszip": "^3.7.1",
     "react": "^17.0.2",
