--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MelonJuice",
+  "name": "melonjuice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-responsive": "^9.0.0-beta.5",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "tone": "^14.7.77",
     "uniqid": "^5.4.0",
     "web-vitals": "^1.1.2"
